fix style: in yearmonth, year list and month list's whitespace be normal

--- a/styles/datepicker.scss
+++ b/styles/datepicker.scss
@@ -109,6 +109,7 @@
       .datepicker-year-list,.datepicker-month-list {
         padding: 0px;
         margin: 0px;
+        white-space: normal;
         .datepicker-year,.datepicker-month {
           display: inline-block;
           height: 25px;
